  - Fix broken menu alignment. BZ #880621
  - Ensure clean_ids doesn't change owner or group. BZ #854425
  - Fix incorrect Revision order. BZ #845432
  - Add OpenSuse Install Section by Norman Dunbar <norman@dunbar-it.co.uk>. BZ #787243
  - Fix POD typos. BZ #874277
  - Remove place holder P tag from HTML para. BZ #847206

3.0.0  Wed Oct 31 2012
  - Update Changes file. BZ #661568
  - Cleaned up README file.
  - Corrected document conventions text. BZ#651616
  - Make XmlClean use File::Inplace instead of grep & sed. BZ #661567
  - Deleted STRICT mode. Added banned_tags and banned_attrs configurations. BZ #663202
  - Fix command example in PUG. BZ #663211
  - Use revision history for edition and release. BZ #642127
  - Deleted edition and release config parameters. BZ #642127
  - Add add_revision action and associated options. BZ #642127
  - Fix wrong BuildRequires and path for desktop packages. BZ #676472
  - Correct typos. Yuri Chornoivan <yurchor@ukr.net> BZ #676997
  - Fix CreateBook texts missing from pot file. BZ #677119
  - Add --msgmerge to update_po to override using internal POT/PO merging. BZ #661569
  - Added base_brand config option for brands to allow multiple base brands. BZ #697367
  - Added site config toc_type to allow selecting TOC styles. BZ #697375
  - Added authortest target for author tests.
  - Purge Site statistics, site tech and HTML site map. BZ #697376
  - Truncate PO Fuzzy/Un-transtaled message, added PO line number. BZ #697380
  - Add Author_Group.xml handling for translations. BZ #697371
  - Split pod from publican command to allow auto-generation.
  - Fix bridgehead links not working in html. BZ #711348
  - Re-add API check. BZ #742097
  - Fix wkhtmltopdf format when building web packages.
  - Fix sort order of books in website navigation. BZ #743792
  - Extra bottom margin for screen. BZ #738689
  - Change stepalternative list style. BZ #687894
  - Add print_unused_images action. BZ #724850