@@ -423,6 +423,32 @@
 
 			</varlistentry>
 			 <varlistentry>
+				<term><parameter>dtd_type</parameter></term>
+				<listitem>
+					<para>
+						Override Type for DocType. Must be a complete string.
+					</para>
+					<note>
+						<para>
+							This parameter is only permitted in a brand.
+						</para>
+					</note>
+				</listitem>
+			</varlistentry>
+			 <varlistentry>
+				<term><parameter>dtd_uri</parameter></term>
+				 <listitem>
+					<para>
+						Override URI for DocType. Must be a complete string.
+					</para>
+					<note>
+						<para>
+							This parameter is only permitted in a brand.
+						</para>
+					</note>
+				</listitem>
+			</varlistentry>
+			 <varlistentry>
 				<term><parameter>ec_id</parameter></term>
 				 <listitem>
 					<para>
